syntax = "proto3";
package rollchains.tiablob.v1;

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "tendermint/types/block.proto";
import "tendermint/types/types.proto";

option go_package = "github.com/rollchains/tiablob";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // SetCelestiaAddress allows a validator to configure their Celestia address for feegranting
  rpc SetCelestiaAddress(MsgSetCelestiaAddress) returns (MsgSetCelestiaAddressResponse);
}

// MsgSetCelestiaAddress defines a SDK message for validators to set their Celestia address
message MsgSetCelestiaAddress {
    option (cosmos.msg.v1.signer) = "validator_address";
    option (amino.name) = "tiablob/MsgSetCelestiaAddress";
  
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    string validator_address = 1
        [ (cosmos_proto.scalar) = "cosmos.ValidatorAddressString" ];
  
    string celestia_address = 2
        [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  }
  
  // MsgSetCelestiaAddressResponse is the response type for the Msg/SetCelestiaAddress RPC method.
  message MsgSetCelestiaAddressResponse {}

  message SignedBlock {
    tendermint.types.Block  block = 1;
    tendermint.types.Commit commit = 2;
  }